--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ perl:
     - "5.14"
 services:
     - redis-server
+    - postgresql
 before_install:
     - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
     - source ~/travis-perl-helpers/init
